fix styling on firefox

--- a/src/style.scss
+++ b/src/style.scss
@@ -36,7 +36,7 @@ canvas {
     height: 400px;
     border-radius: 120px;
     background-color: white;
-    border: 10px solid, #2dbecf;
+    border: 10px solid #2dbecf;
     box-sizing: border-box;
 
     padding-top: 50px;
